# pangolin

./: .gitignore  .gitignore.agent-firewall  AGENTS.md  CLAUDE.md  CONTRIBUTING.agent-firewall.md  INTEGRATION_PLAN.md  Makefile  PHASE0_COMPLETION_GUIDE.md  PHASE0_SOURCE_FREEZE_DECISION.md  PHASE2_COMPLETION_SUMMARY.md  PHASE_STATUS_REPORT.md  PLAN.md  PROJECT_SUMMARY.md  PROJECT_TEACHER_BRIEF.md  README.md  SQLITE_GUIDE.md  create_sample.py  custom_config.json  demo_agent_scan.py  introduction.html  introduction.md  package.json  pangolin.mjs  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  start-all.sh  test_feishu_create_doc.py  test_parse_gateway.py  tsconfig.json  vitest.config.ts
.claude/docs/: architectural_patterns.md
.github/: pull_request_template.md
agent-scan/: .gitignore  TERMS.md  catalog-info.yaml
apps/pangolin-frontend/: nuxt.config.ts  package.json
audit/: firewall.jsonl
data/: datasets.jsonl  firewall.db  policies.jsonl  traces.jsonl
data/scenarios/: playground.json
docs/feishu/: FEISHU_FINAL_REPORT.md  FEISHU_INTEGRATION.md  FEISHU_STATUS.md  FEISHU_SUMMARY.md  FEISHU_TOOLS_INTEGRATION.md  INTEGRATION.md
docs/guides/: introduction.html
docs/planning/: INTEGRATION_PLAN.md
docs/refactor/: openclaw-retention-playbook.md  phase6-repo-consolidation.md
docs/reports/: UI_INTEGRATION_STATUS.md
extensions/agent-firewall/: .env.example  CODE_QUALITY_REPORT.md  PROGRESS_REPORT.md  create_sample.py  requirements.txt  test_feishu_create_doc.py  tmp_verify_verdict_flow.py
frontend/: PHASE6_UI_ENHANCEMENT.md  index.html  tsconfig.json
frontend/src/: App.vue  composables.ts
git-hooks/: pre-commit
scripts/: canvas-a2ui-copy.ts  core-only-disabled.sh  openclaw-doctor.sh  pangolin-dev-up.sh  phase6-legacy-path-audit.mjs  run-node.mjs  start-all.sh  stop-all.sh  test-force.ts  test-shell-completion.ts
src/: __init__.py  config.py  entry.ts  feishu_tools.py  gateway_tools.py  index.ts  main.py  skills.py
src/agent_studio/: __init__.py  catalog.py  storage.py
src/agents/: agent-scope.ts  cache-trace.ts  docs-path.ts  identity.ts  model-selection.ts  models-config.ts  pi-tools.policy.ts  pi-tools.ts  session-transcript-repair.ts  skills.ts  workspace-templates.ts
src/audit/: __init__.py  logger.py
src/cli/: banner.ts  (+6 more)
tests/: test_annotations.py  test_feishu_adapter.py  test_firewall.py  test_policy_dsl.py  test_skills.py  test_storage.py
(+303 files in other folders)
