[project]
name = "openclaw-agent-firewall"
version = "2026.2.16"
description = "Zero-Trust Agent Communication Security Monitoring & Defense System for the OpenClaw ecosystem"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.34.0",
  "websockets>=14.0",
  "pydantic>=2.10.0",
  "aiofiles>=24.1.0",
  "httpx>=0.28.0",
  "ahocorasick-rs>=0.22.0",
  "orjson>=3.10.0",
  "python-dotenv>=1.2.2",
  "pyyaml>=6.0.3",
  "lark-oapi>=1.5.3",
  "python-socks>=2.8.1",
  "aiosqlite>=0.20.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24.0", "httpx>=0.28.0", "ruff>=0.8.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "ANN", "ASYNC", "S", "B"]
ignore = ["ANN101", "ANN102"]
